<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/explore"
            android:icon="@drawable/explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/life_chat"
            android:icon="@drawable/live"
            android:title="@string/lifechat" />
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/wish_list"
            android:icon="@drawable/wishlist"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/e_magazine"
            android:icon="@drawable/e_magazine"
            android:title="@string/emagazine" />
    </group>
</menu>